--- a/app/globals.css
+++ b/app/globals.css
@@ -1,29 +1,19 @@
 @import "tailwindcss";
 
-
-
-
-/* Your other global styles */
-
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root {
+  --background: #ffffff;
+  --foreground: #000000;
 }
+
+.dark {
+  --background: #000000;
+  --foreground: #ffffff;
+} 
 
 @font-face {
   font-family: "SF Pro Display";
@@ -50,7 +40,6 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: "SF Pro Display", sans-serif;
-  background-color: #090702;
 }
 
 
