--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,6 @@
-@import "tailwindcss";
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --background: #ffffff;
@@ -41,7 +38,6 @@ body {
   color: var(--foreground);
   font-family: "SF Pro Display", sans-serif;
 }
-
 
 .container {
   max-width: 1440px;
